--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,7 +5,7 @@
     <Version>0.1.0</Version>
     <LangVersion>preview</LangVersion>
     <AssemblyVersion>1.0.0</AssemblyVersion>
-    <PackageTags>Excel</PackageTags>
+    <PackageTags>Excel, ClosedXML</PackageTags>
     <Description>Excelsior is an Excel spreadsheet generation library with a distinctive data-driven approach that leverages ClosedXML (https://github.com/ClosedXML/ClosedXML) to create Excel-compatible files.</Description>
     <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
