--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@ src/Verify/EmptyFiles/* binary
 *.verified.txt text eol=lf working-tree-encoding=UTF-8
 *.verified.xml text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
+*.verified.csv text eol=lf working-tree-encoding=UTF-8
 
 src/.editorconfig text eol=lf working-tree-encoding=UTF-8
 *.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
