--- a/src/ExcelsiorAspose/ExcelsiorAspose.csproj
+++ b/src/ExcelsiorAspose/ExcelsiorAspose.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <PackageTags>Excel, Aspose</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Aspose.Cells" />
