--- a/src/ExcelsiorClosedXml/ExcelsiorClosedXml.csproj
+++ b/src/ExcelsiorClosedXml/ExcelsiorClosedXml.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+    <PackageTags>Excel, ClosedXML</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ClosedXML" />
