--- a/src/ExcelsiorSyncfusion/ExcelsiorSyncfusion.csproj
+++ b/src/ExcelsiorSyncfusion/ExcelsiorSyncfusion.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <PackageTags>Excel, ClosedXML</PackageTags>
+    <PackageTags>Excel, Syncfusion</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
