--- a/src/Model/Model.csproj
+++ b/src/Model/Model.csproj
@@ -4,11 +4,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ClosedXML" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ExcelsiorClosedXml\ExcelsiorClosedXml.csproj" />
+    <ProjectReference Include="..\Excelsior\Excelsior.csproj" />
   </ItemGroup>
 </Project>
