--- a/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
+++ b/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
@@ -17,6 +17,7 @@
     <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     
+    <Compile Include="..\ExcelsiorAspose.Tests\ValueRenderedTests.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\Enums.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ColumnWidths.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\StructTests.cs" />
