--- a/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
+++ b/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
@@ -14,7 +14,8 @@
     <ProjectReference Include="..\Model\Model.csproj" />
     <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
-    
+
+    <Compile Include="..\ExcelsiorAspose.Tests\ValueRenderedTests.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\Enums.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ColumnWidths.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\StructTests.cs" />
