--- a/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
+++ b/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
@@ -17,6 +17,8 @@
     <Using Include="NUnit.Framework.Legacy.ClassicAssert" Static="True" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitter.cs" />
+    <Compile Include="..\ExcelsiorAspose.Tests\SplitterTests.cs" />
+    <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitterUseHierachyForName.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\FormatGuessingTests.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\DateFormats.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ValueRenderedTests.cs" />
