--- a/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
+++ b/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
 
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitter.cs" />
+    <Compile Include="..\ExcelsiorAspose.Tests\SplitterTests.cs" />
+    <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitterUseHierachyForName.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\FormatGuessingTests.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\DateFormats.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ValueRenderedTests.cs" />
