--- a/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
+++ b/src/ExcelsiorClosedXml.Tests/ExcelsiorClosedXml.Tests.csproj
@@ -39,7 +39,7 @@
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithInheritedCustomRender.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithToString.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\WhitespaceTests.cs" />
-    <None Include="**\*.png">
+    <None Include="**\*.png" Exclude="bin\**">
       <ParentFile>$([System.String]::Copy('%(FileName)').Split('.')[0])</ParentFile>
       <DependentUpon>%(ParentFile).cs</DependentUpon>
     </None>
