--- a/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
+++ b/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
@@ -17,6 +17,7 @@
 
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitter.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\SplitterTests.cs" />
+    <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithCustomEnumerableRender.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\ComplexTypeWithSplitterUseHierachyForName.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\FormatGuessingTests.cs" />
     <Compile Include="..\ExcelsiorAspose.Tests\DateFormats.cs" />
