refs or cleanup

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -9,9 +9,10 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageVersion Include="Microsoft.Office.Interop.Excel" Version="16.0.18925.20022" />
-    <PackageVersion Include="Polyfill" Version="9.2.0" />
-    <PackageVersion Include="ProjectDefaults" Version="1.0.162" />
-    <PackageVersion Include="Syncfusion.XlsIO.Net.Core" Version="31.2.12" />
+    <PackageVersion Include="Polyfill" Version="9.3.0" />
+    <PackageVersion Include="ProjectDefaults" Version="1.0.163" />
+    <PackageVersion Include="ProjectFiles" Version="0.1.2" />
+    <PackageVersion Include="Syncfusion.XlsIO.Net.Core" Version="31.2.15" />
     <PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageVersion Include="Aspose.Cells" Version="25.11.0" />
     <PackageVersion Include="Verify" Version="31.7.2" />
@@ -22,7 +23,7 @@
     <PackageVersion Include="Verify.NUnit" Version="31.7.2" />
     <PackageVersion Include="NUnit" Version="4.4.0" />
     <PackageVersion Include="NUnit3TestAdapter" Version="5.2.0" />
-    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.4" />>
+    <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.4" />
     <PackageVersion Include="Verify.Syncfusion" Version="2.4.2" />
   </ItemGroup>
 </Project>
