--- a/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
+++ b/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+    <NoWarn>$(NoWarn);NU1902</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Verify.DiffPlex" />
