--- a/src/ExcelsiorOpenXml.Tests/ExcelsiorOpenXml.Tests.csproj
+++ b/src/ExcelsiorOpenXml.Tests/ExcelsiorOpenXml.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" />
+    <PackageReference Include="Verify.OpenXml" />
     <PackageReference Include="Verify.DiffPlex" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Verify.NUnit" />
