--- a/src/ExcelsiorClosedXml/ExcelsiorClosedXml.csproj
+++ b/src/ExcelsiorClosedXml/ExcelsiorClosedXml.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" Condition="$(Configuration)=='Release'" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" Condition="'$(CI)' == 'true'" />
     <PackageReference Include="System.ComponentModel.Annotations" />
     <ProjectReference Include="..\Excelsior\Excelsior.csproj" />
   </ItemGroup>
