--- a/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
+++ b/src/ExcelsiorSyncfusion.Tests/ExcelsiorSyncfusion.Tests.csproj
@@ -7,6 +7,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Verify.ImageMagick" />
     <PackageReference Include="Verify.NUnit" />
+    <PackageReference Include="Argon" />
+    <PackageReference Include="DiffEngine" />
+    <PackageReference Include="EmptyFiles" />
+    <PackageReference Include="SimpleInfoName" />
+    <PackageReference Include="Verify" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Verify.Syncfusion" />
